--- a/worksheet3_de la Cruz-Hanz/Rworksheet#3b/Rworksheet_de la Cruz-Hanz #3b.Rmd
+++ b/worksheet3_de la Cruz-Hanz/Rworksheet#3b/Rworksheet_de la Cruz-Hanz #3b.Rmd
@@ -10,10 +10,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r infodataframe}
-personalInfo <- data.frame(
+personalInfo <- data.frame (
   Respoondents = 1:20,
-  Sex = c(rep(2,10),1,rep(2,7),1,2),
+  Sex = c(1,rep(2,10),1,rep(2,7),1,2))
 perosnalInfo
-)
+
 ```
 
