--- a/worksheet3_de la Cruz-Hanz/Rworksheet#3b/Rworksheet_de la Cruz-Hanz #3b.Rmd
+++ b/worksheet3_de la Cruz-Hanz/Rworksheet#3b/Rworksheet_de la Cruz-Hanz #3b.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Rworksheet_de la Cruz-Hanz #3b"
-output: pdf_document
+output:
+  pdf_document: default
+  html_document:
+    df_print: paged
 date: "2023-10-04"
 ---
 
@@ -11,9 +14,131 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r infodataframe}
 personalInfo <- data.frame (
-  Respoondents = 1:20,
-  Sex = c(1,rep(2,10),1,rep(2,7),1,2))
-perosnalInfo
+  Respondents = 1:20,
+  Sex = c(2,2,1,rep(2,7),1,rep(2,7),1,2),
+  Fathers_Occupation = c(1,rep(3,3),1:3,rep(1,3),(3:1),3,3,1,3,1,2,1),
+  Persons_at_Home = c(5,7,3,8,5,9,6,7,8,4,7,5,4,7,8,8,3,11,7,6),
+  Siblings_at_School = c(6,4,4,1,2,1,5,3,1,2,3,2,5,5,2,1,2,5,3,2),
+  Types_of_Houses = c(1:3,1,1,3,3,1:3,2,3,2,2,rep(3,5),2)
+  )
+  
+  personalInfo
+```
+```{r summary}
+summary(personalInfo)
+str(personalInfo)
+#It shows the mean, the median the 1st and 3rd Quarter, the minimum and maximum number.
+#It also shows the data or observations inside the columns, the column names and how many observations, 
+# and variables inside the data frame
+ 
+```
+
+```{r mean of the siblings}
+meanSiblings <- mean(personalInfo$Siblings_at_School)
+meanSiblings 
+#the means of the siblings attending school is not 5 but 2.95 or 3
+```
+```{r extracting 1st two rows and columns}
+firstTwoRowsCols <- personalInfo[1:2,1:2]
+firstTwoRowsCols
+```
+```{r extracting rows 2 and 4, and columns 2 and 4}
+rowsColsBetween <- personalInfo[c(3,5),c(2,4)]
+rowsColsBetween
 
 ```
 
+``` {r house types}
+types_house <- personalInfo$Types_of_Houses
+types_house
+```
+
+```{r select Male and farmer}
+maleAndFarmers <- personalInfo[personalInfo$Sex == 1 & personalInfo$Fathers_Occupation == 1, ]
+maleAndFarmers
+```
+
+```{r female and greater than or equal to 5 members in school}
+femaleAndSchool <- personalInfo[personalInfo$Sex == 2 & personalInfo$Siblings_at_School >= 5,]
+femaleAndSchool
+```
+
+```{r data frame}
+df = data.frame(
+  Ints=integer(),
+  Doubles=double(), Characters=character(),
+  Logicals=logical(),
+  Factors=factor(),
+  stringsAsFactors=FALSE)
+
+print("Structure of the empty dataframe:")
+print(str(df))
+#the results show many variables or columns are in the data frame, shows the observations, 
+#shows the column names and shows the equivalent function for each vector.
+```
+
+
+
+```{r Household Data}
+houseHoldData <- data.frame (
+  Respondents = 1:10,
+  Sex = c("Male","Female","Female","Male","Male","Female","Female","Male","Female","Male"),
+  
+  Fathers_Occupation = c(1,2,3,3,1,2,2,3,1,3),
+  Persons_at_Home = c(5,7,3,8,6,4,4,2,11,6),
+  Siblings_at_School = c(2,3,0,5,2,3,1,2,6,2),
+  Types_of_Houses = c("Wood","Congrete","Congrete","Wood","Semi-Congrete","Semi-Congrete","Wood",
+                      "Semi-Congrete","Semi-Congrete","Congrete")
+)
+houseHoldData
+
+```
+
+
+```{r CSV FILE}
+householdCSV <- "household_data.csv"
+write.csv(houseHoldData, file = householdCSV, row.names = FALSE)
+householdCSV
+
+```
+
+```{r convert sex using factor and change into ingteger}
+houseHoldData$Sex <- factor(houseHoldData$Sex, c("Male","Female"),
+                     levels(houseHoldData$Sex) <- c(1, 2))
+
+houseHoldData
+
+```
+
+```{r convert types of houses}
+houseHoldData$Types_of_Houses <- factor(houseHoldData$Types_of_Houses,
+                                        levels = c("Wood", "Congrete", "Semi-Congrete"))
+
+
+levels(houseHoldData$Types_of_Houses) <- c(1, 2, 3)
+houseHoldData 
+```
+```{r fathers occupation}
+fathersOccupation <- houseHoldData$Fathers_Occupation <- factor(houseHoldData$Fathers_Occupation,
+                                           levels = c(1, 2, 3),
+                                           labels = c("Farmer", "Driver", "Others"))
+houseHoldData
+```
+```{r female and occupation drivers}
+femaleAndDrivers <- houseHoldData[houseHoldData$Sex == 2 & 
+                                    houseHoldData$Fathers_Occupation == "Driver", ]
+femaleAndDrivers
+```
+```{r 5 or more siblings}
+fiveOrMoreSiblings <- houseHoldData[houseHoldData$Siblings_at_School >= 5, ]
+fiveOrMoreSiblings
+```
+
+```{r interpret graph}
+#NUMBER 4 Interpret the graph
+#The graph consistently Shows that the negative sentiments are the greatest in number, 
+# the neutral being the least and the positive sentiments in the middle. The greatest 
+# value of negative sentiments was recorded on July 15, 2020, the Positive sentiments 
+# maxing out in July 21, 2020, and the neutral on July 15, 2020 also. All of the 
+# sentiments' least number were all recorded on July 20, 2020
+```
