--- a/Worksheet4_de la Cruz-Hanz/RWorksheet_de la Cruz-Hanz#4a.Rmd
+++ b/Worksheet4_de la Cruz-Hanz/RWorksheet_de la Cruz-Hanz#4a.Rmd
@@ -85,7 +85,99 @@ DirectionDF
 new_order_data <- factor(DirectionDF,levels = c("East","West","North"))
 print(new_order_data)
 ```
+
 ```{r readtable}
 read.table(file="import_march.csv",sep = ",",header = TRUE, as.is=TRUE )
 ```
+```{r numbers 1 to 50}
 
+userInput <- readline(prompt="Enter a number: ")
+
+if (as.numeric(userInput) < 1 || as.numeric(userInput) > 50) {
+  print("The number selected is beyond the range of 1 to 50")
+} else if (as.numeric(userInput) == 20) {
+  print("TRUE")
+} else {
+  print(userInput)
+
+}
+```
+
+```{r change}
+total_amount <- as.numeric(readline(prompt = "Enter the total amount: "))
+
+if (total_amount >= 1000) {
+  num_1000_bills <- total_amount %/% 1000
+  total_amount <- total_amount %% 1000
+  cat("Number of 1000 peso bills:", num_1000_bills, "\n")
+}
+if (total_amount >= 500) {
+  num_500_bills <- total_amount %/% 500
+  total_amount <- total_amount %% 500
+  cat("Number of 500 peso bills:", num_500_bills, "\n")
+}
+if (total_amount >= 200) {
+  num_200_bills <- total_amount %/% 200
+  total_amount <- total_amount %% 200
+  cat("Number of 200 peso bills:", num_200_bills, "\n")
+}
+if (total_amount >= 100) {
+  num_100_bills <- total_amount %/% 100
+  total_amount <- total_amount %% 100
+  cat("Number of 100 peso bills:", num_100_bills, "\n")
+}
+if (total_amount >= 50) {
+  num_50_bills <- total_amount %/% 50
+  total_amount <- total_amount %% 50
+  cat("Number of 50 peso bills:", num_50_bills, "\n")
+}
+
+```
+
+```{r grades}
+student_grades <- data.frame(
+  Name = c("Annie","Thea","Steve","Hanna"),
+  Grade_1 = c(85,65,75,95),
+  Grade_2 = c(65,75,55,75),
+  Grade_3 = c(85,90,80,100),
+  Grade_4 = c(100,90,85,90)
+)
+  
+student_grades
+student_grades$Average <- (student_grades$Grade_1 + student_grades$Grade_2 + student_grades$Grade_3 + student_grades$Grade_4) / 4
+
+achievers <- subset(student_grades, Average == 90, select = c("Name", "Average"))
+achievers
+
+
+```
+```{r test difficulty}
+Tests <- which(rowMeans(student_grades[, 2:5]) < 80)
+output <- if (length(Tests) > 0) {
+  if (Tests == 1) {
+    paste("The 1st test was difficult.")
+  } else if (Tests == 2) {
+    paste("The 2nd test was difficult.")
+  } else if (Tests == 3) {
+    paste("The 3rd test was difficult.")
+  } else {
+    paste("The ", Tests, "th test was difficult.")
+  }
+} else {
+  "No test was difficult."
+}
+output
+```
+```{r max grade }  
+# Creating the data frame
+student_grades$Highest <- pmax(pmax(student_grades$Grade_1, student_grades$Grade_2), pmax(student_grades$Grade_3, student_grades$Grade_4))
+
+high_achievers <- subset(student_grades, Highest > 90, select = c("Name", "Highest"))
+
+max_grade <- paste(high_achievers$Name,"'s highest grade this semester is ", high_achievers$Highest, ".")
+cat(max_grade)  
+```
+  
+  
+  
+  
