--- a/Worksheet4_de la Cruz-Hanz/RWorksheet_de la Cruz-Hanz#4c.Rmd
+++ b/Worksheet4_de la Cruz-Hanz/RWorksheet_de la Cruz-Hanz#4c.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "RWorksheet#4C"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 date: "2023-11-21"
 ---
 
@@ -18,34 +20,54 @@ mpgDF
 
 ```{r  }
 library("dplyr")
-countMPG <- mpgDF %>%
-  count(manufacturer,model)
-countMPG
+countMPG <- str(mpgDF)
 ```
 
 ```{r grouping unique models }
-uniqueMPG <- countMPG[c(3,6,10,12,16:22,24,26,27,29),1:3,]
+uniqueMPG <- mpgDF[c(3,6,10,12,16:22,24,26,27,29),1:3,]
 uniqueMPG
+
+```
+```{r most}
+library(dplyr)
+
+
+unique_models_per_manufacturer <- uniqueMPG %>%
+  group_by(manufacturer) %>%
+  summarize(models = n_distinct(model)) %>%
+  arrange(desc(models))
+
+
+manufacturer_most_models <- unique_models_per_manufacturer$manufacturer[1]
+
+# Show the manufacturer with the most models
+cat("Manufacturer with the most models:", manufacturer_most_models, "\n")
+
 ```
 
 ```{r graphing the unique models}
 
-barplot(uniqueMPG$n, main = "Unique Cars",
-        xlab = "Cars",
-        ylab = "Total Numbers",
-        names.arg = uniqueMPG$model,
-        cex.names = 0.35,
-        col = c("red","blue","green","yellow","purple"))
+modelCounts <- table(uniqueMPG$manufacturer, uniqueMPG$model)
+
+UniquePlot <- barplot(rowSums(modelCounts), 
+        names.arg = rownames(modelCounts),
+        main = "Unique Models per Manufacturer",
+        xlab = "Manufacturer",
+        ylab = "Number of Unique Models",
+        col = "red",
+        ylim = c(0, max(rowSums(modelCounts)) + 1))
+    
+
 ```
 
 ```{r ggplot unique models}
 library("ggplot2")
 number <- uniqueMPG$n
 model <-  uniqueMPG$model
-ggplot(data = uniqueMPG, 
-       aes(x= model, y= number)) +
-     geom_bar(stat='identity',fill = rainbow(15))
-   
+uniquePlot <- ggplot(data = uniqueMPG, aes(x = model, y = n)) +
+  geom_bar(stat = 'identity', fill = rainbow(15)) +
+  labs(title = "Count of Unique Models", x = "Model", y = "Count") +
+  theme_minimal()
         
 ```
 
@@ -59,5 +81,115 @@ first20 <- mpg[1:20,1:11]
 first20Model <- first20$model
 first20Num <- first20$n
 
+first20Model <- first20$model
+first20Year <- first20$year
 
+first20DF <- data.frame(model = first20Model, year = first20Year)
+
+ggplot(first20DF, aes(x = year, y = model)) +
+      geom_point() +
+     labs(x = "Year", y= "Model") +
+      ggtitle("20 Observations: Model and Year")
+  
+```
+
+```{r car models}
+carModels <- mpg %>%
+  group_by(model) %>%
+  summarize(numofCars = n())
+carModels
+```
+
+
+```{r flipped bar graph obervations}
+first20ModDF <- data.frame(Model = first20Model)
+first20Plot <- ggplot(first20ModDF, aes(x = Model)) +
+      ggtitle("Top 20 Models") +
+      geom_bar() +
+      coord_flip() +
+      labs(x = "Count", y = "Model") 
+first20Plot
+
+```
+
+```{R cylinder }
+cylinderDisp <- ggplot(mpg, aes(x = cyl, y = displ, color = displ)) +
+  geom_point() + labs(title = "Relationship between No. of Cylinders and Engine Displacement",
+  x="Number of Cylinders",
+  y="Engine Displacement") +
+  scale_color_continuous(name = "Engine Displacement") +
+  theme_minimal()
+
+cylinderDisp
+#The relationship between number of cylinder to engine displacement is directly proportional
+#The more cylinders you have the greater the average displacement
+```
+```{r highway display}
+highwayDisp <- ggplot(mpg, aes(x = displ, y = hwy, color = cty)) +
+  geom_point() +
+  labs(title = "Relationship between Engine Displacement and Highway MPG", x = "Engine Displacement",
+  y = "Highway MPG",
+  color = "City MPG") +
+  scale_color_continuous(name = "City MPG") +
+  theme_minimal()
+highwayDisp
+```
+```{r }
+library(readxl)
+alexafileDF <- read_excel("alexa_file.xlsx")
+summary(alexafileDF)
+#Alexa has 3150 observations
+```
+```{r grouping the variations using dplyr}
+library(dplyr)
+totalVar <- alexafileDF %>%
+   group_by(variation) %>%
+   summarize(total_count = n())
+totalVar
+
+```
+```{r totalVar plot}
+totalVarPlot <- ggplot(alexafileDF, aes(x = variation)) +
+  geom_bar(fill = rainbow(16)) +
+  labs(title = "Count of Variations",
+  x = "Variations",
+   y = "Count") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 40, hjust = 1))
+totalVarPlot
+#I observed that the red variants have more counts thatn compared to white and other variants
+```
+```{r verified reviews}
+alexafileDF$date <- as.Date(alexafileDF$date)
+verifiedReviewsPlot <- ggplot(alexafileDF, aes(x = date, y = verified_reviews)) +
+  geom_line(color = "blue") +
+  labs(title = "Number of Verified Reviews Over Time",
+   x = "Date",
+  y = "Number of Verified Reviews") +
+  theme_minimal()
+verifiedReviewsPlot
+```
+```{r variations and ratings}
+library(dplyr)
+library(ggplot2)
+variationRatings <- alexafileDF %>%
+  group_by(variation) %>%
+  summarize(avg_rating = mean(rating, na.rm = TRUE)) %>%
+  arrange(desc(avg_rating))
+highestVar <- variationRatings$variation[which.max(variationRatings$avg_rating)]
+highestVar
+#The highest in rating is the Walnut Finish
+
+```
+
+```{R plotting variations and rating }
+varRatingPlot <- ggplot(variationRatings, aes(x = variation, y = avg_rating)) +
+  geom_bar(stat = "identity", fill = "pink", color = "black") +
+  labs(title = "Average Ratings by Variation",
+  x = "Variations",
+  y = "Average Rating") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+varRatingPlot
+cat("The Variation with the highest average rating is", highestVar, "\n")
 ```
